data/derived/comb/progs/unify/prog1236.ml.out
Characters 189-195:
  | hd::tl -> List.append (x,hd) (argmaker x tl)
                          ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
